tests/ui/issues/issue-20413.stderr
error[E0392]: parameter `T` is never used
  --> $DIR/issue-20413.rs:6:15
   |
LL | struct NoData<T>;
   |               ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: usize` instead

error[E0275]: overflow evaluating the requirement `NoData<NoData<NoData<NoData<NoData<NoData<NoData<...>>>>>>>: Foo`
  --> $DIR/issue-20413.rs:9:36
   |
LL | impl<T> Foo for T where NoData<T>: Foo {
   |                                    ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_20413`)
note: required for `NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<NoData<...>>>>>>>>>>>>>` to implement `Foo`
  --> $DIR/issue-20413.rs:9:9
   |
LL | impl<T> Foo for T where NoData<T>: Foo {
   |         ^^^     ^                  --- unsatisfied trait bound introduced here
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-20413/issue-20413.long-type-hash.txt'
   = note: 126 redundant requirements hidden
   = note: required for `NoData<T>` to implement `Foo`

error[E0275]: overflow evaluating the requirement `AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<...>>>>>>>: Bar`
  --> $DIR/issue-20413.rs:28:42
   |
LL | impl<T> Bar for T where EvenLessData<T>: Baz {
   |                                          ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_20413`)
note: required for `EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<...>>>>>>>` to implement `Baz`
  --> $DIR/issue-20413.rs:35:9
   |
LL | impl<T> Baz for T where AlmostNoData<T>: Bar {
   |         ^^^     ^                        --- unsatisfied trait bound introduced here
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-20413/issue-20413.long-type-hash.txt'
note: required for `AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<...>>>>>>>` to implement `Bar`
  --> $DIR/issue-20413.rs:28:9
   |
LL | impl<T> Bar for T where EvenLessData<T>: Baz {
   |         ^^^     ^                        --- unsatisfied trait bound introduced here
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-20413/issue-20413.long-type-hash.txt'
   = note: 125 redundant requirements hidden
   = note: required for `EvenLessData<T>` to implement `Baz`

error[E0275]: overflow evaluating the requirement `EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<...>>>>>>>: Baz`
  --> $DIR/issue-20413.rs:35:42
   |
LL | impl<T> Baz for T where AlmostNoData<T>: Bar {
   |                                          ^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_20413`)
note: required for `AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<...>>>>>>>` to implement `Bar`
  --> $DIR/issue-20413.rs:28:9
   |
LL | impl<T> Bar for T where EvenLessData<T>: Baz {
   |         ^^^     ^                        --- unsatisfied trait bound introduced here
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-20413/issue-20413.long-type-hash.txt'
note: required for `EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<AlmostNoData<EvenLessData<...>>>>>>>` to implement `Baz`
  --> $DIR/issue-20413.rs:35:9
   |
LL | impl<T> Baz for T where AlmostNoData<T>: Bar {
   |         ^^^     ^                        --- unsatisfied trait bound introduced here
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-20413/issue-20413.long-type-hash.txt'
   = note: 125 redundant requirements hidden
   = note: required for `AlmostNoData<T>` to implement `Bar`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0275, E0392.
For more information about an error, try `rustc --explain E0275`.
